Made nav bar still show while scrolling change position to fixed, top 0px and the z-index to 1000 so it will show over other elements

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ header h3 {
 nav {
     border-bottom: 1px solid lightgray;
     border-top : 1px solid lightgray;
+    background-color: rgba(55, 185, 229, 0.105);
+    position: fixed;
+    top: 0px;
+    z-index: 1000;
 }
 
 nav ul li {
@@ -45,3 +49,7 @@ nav ul li {
     padding: 20px 60px;
 }
 
+#html-tables {
+    text-align: center;
+    padding: 40px;
+}
